# aito-agent-demo

./: .env.example  .gitignore  CLAUDE.md  README.md  do  pyproject.toml  shell.nix
assets/: teaser.html
book/: test_01_aito_schema_book.py  test_02_resolution_scorecard_book.py  test_03_match_book.py
books/: index.md
docs/: TASK.md  aito-agent-demo-shell.html  aito-cto-brief.html  aito-front.html
docs/product-sheet/: product-sheet.typ
docs/use-cases/: 01-opportunity-assistant.md  02-sales-agent.md  03-company-360-dashboard.md  04-company-agent.md  05-ticket-resolution.md  06-tool-routing-and-handoff.md  README.md
frontend/: next.config.ts  package-lock.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentChat.tsx  AppShell.tsx  AugmentView.tsx  CompanyAgentView.tsx  CompanyDashboardView.tsx  HandoffView.tsx  OverviewView.tsx  SalesAgentView.tsx  SalesView.tsx  ToolboxView.tsx
frontend/lib/: analytics.ts
frontend/scripts/: screenshot-teaser.cjs
resolution-scorecard/: chat-demo.html  demo.html
resolution-scorecard/aito/: client.py
resolution-scorecard/bench/: config.py  experiment.py  llm.py  report.py
resolution-scorecard/data/: generate.py  test.json  train.json
scripts/: seed_company.py  seed_routing.py  seed_sales.py
src/: agent_core.py  aito_client.py  app.py  company_agent.py  config.py  llm_agent.py  sales_agent.py  tools_catalog.json
telco-tool-routing-bench/: .env.example  README.md  requirements.txt  run-py
telco-tool-routing-bench/bench/: llm.py  (+10 more)
ticket-assignment-bench/: run-py
(+43 files in other folders)
